modify cobbler install windows7

--- a/1.Cobbler.md
+++ b/1.Cobbler.md
@@ -1,4 +1,4 @@
-#操作系统安装流程及系统初始化规范
+﻿#操作系统安装流程及系统初始化规范
 
 <pre>
 ##操作系统安装规范
@@ -176,7 +176,7 @@ ITIL v3将ITIL理论分成了五部分
 		b)	Filename “pxelinux.0”(要下载的文件)
 	5.	pxelinux.0告诉pxe要下载的配置文件是pxelinux.cfg目录下的default
 	6.	pxe下载并依据配置文件的内容下载启动必须的文件，并通过ks,cfg开始系统安装
-####2.Cobbler自动化安装：
+####2.Cobbler自动化安装：版本为cobbler2.8
 #####配置源和安装必备软件：
 rpm –ivh https://mirrors.aliyun.com/epel/epel-release-latest-7.noarch.rpm
 yum install httpd dhcp tftp cobbler cobbler-web pykickstart xinetd –y
@@ -218,7 +218,7 @@ Cobbler profile report  查看详细的参数信息
 导入kickstart文件：cobbler profile edit --name= CentOS-7-x86_64 --kickstart=/var/lib/cobbler/kickstarts/CentOS-7-x86_64.cfg   (作用是指定CentOS7系统镜像的kickstart文件配置，事先要导入到这个默认位置)
 cobbler profile edit --name=CentOS-7-x86_64 --kopts='net.ifnames=0 biosdevname=0'  使自动化安装Centos7更改linux内核参数，使网卡名称为eth0、eth1
 15. cobbler sync  同步更改后的配置
-####CentOS-7-x86_64.cfg（kickstart配置文件参数）：
+####CentOS-7-x86_64.cfg（kickstart配置文件参数）： #注：centos的kickstart默认文件sample_end.ks也可以安装centos，只是不像这样定制化安装
 <pre>
 [root@autodep kickstarts]# cat CentOS-7.6-DVD-1810.iso-x86_64.ks 
 lang en_US
@@ -347,5 +347,201 @@ Cobbler sync
 ###程序服务安装规范
 1.源码安装路径：/usr/local/appname.vsesion
 2.创建软连接：ln -s /usr/local/appname.version /usr/local/appname
+
+
+####批量部署ubuntu
+[root@autodep down]# mount /down/ubuntu-16.04.4-server-amd64.iso /mnt
+[root@autodep down]# cobbler import --name=ubuntu-16.04.4-server-amd64.iso --arch=x86_64 --path=/mnt/  #导入ubuntu
+[root@autodep kickstarts]# cobbler profile edit --name=ubuntu-16.04.4-server.iso-x86_64 --kickstart=/var/lib/cobbler/kickstarts/sample.seed  #使用cobbler自带的默认kickstart进行安装
+[root@autodep kickstarts]# cobbler list #列出cobbler的distros,profiles,repos等信息
+distros:
+   CentOS-7.6-DVD-1810.iso-x86_64
+   ubuntu-16.04.4-server.iso-x86_64
+profiles:
+   CentOS-7.6-DVD-1810.iso-x86_64
+   ubuntu-16.04.4-server.iso-x86_64
+repos:
+   ubuntu-16.04.4-server.iso-x86_64
+[root@autodep kickstarts]# cobbler repo remove --name=ubuntu-16.04.4-server.iso-hwe-x86_64
+[root@autodep kickstarts]# cobbler profile remove --name=ubuntu-16.04.4-server.iso-hwe-x86_64
+[root@autodep kickstarts]# cobbler distro remove --name=ubuntu-16.04.4-server.iso-hwe-x86_64
+[root@autodep kickstarts]# cobbler sync
+#注：以上完成后即可对ubuntu自动化进行安装
+
+
+####安装Windows7系统 ----自己实际操作中，可以进入PXE win7界面，需要按任意键进入安装，但是下一步时无法获取ip地址，导致无法执行setup.exe安装程序进行安装
+使用Windows AIK（适用于win7的）工具来定制Win PE，需要去Microsoft官网下载ISO包
+1. win7AIK下载链接：https://download.microsoft.com/download/6/3/1/631A7F90-E5CE-43AA-AB05-EA82AEAA402A/KB3AIK_CN.iso
+2. 解压AIK包
+3. 进入解压后的目录，双击StartCD.exe，点击Windows AIK安装程序 开始安装
+4. 安装完毕后，在开启菜单以管理员权限启动‘部署工具命令提示’这个工具来定制Win PE镜像
+5. 通过命令行制作Win PE镜像,ip地址为Cobbler服务器地址，以后安装时需要进行连接的
+--------------------- 
+进入一个盘，例如这里进入E盘
+C:\Program Files\Windows AIK\Tools\PETools> D:
+生成Win PE预安装文件
+D:\> copype amd64 D:\winpe
+挂载成可读写形式
+D:\> imagex /mountrw D:\winpe\winpe.wim 1 D:\winpe\mount
+制作start脚本
+D:\> echo ping -n 7 -l 69 192.168.1.233 >> D:\winpe\mount\Windows\System32\startnet.cmd
+D:\> echo net use Z: \\192.168.1.233\share >> D:\winpe\mount\Windows\System32\startnet.cmd
+D:\> echo Z: >> D:\winpe\mount\Windows\System32\startnet.cmd
+D:\> echo cd win >> D:\winpe\mount\Windows\System32\startnet.cmd
+D:\> echo setup.exe /unattend:Autounattend.xml >> D:\winpe\mount\Windows\System32\startnet.cmd
+卸载
+D:\> imagex /unmount D:\winpe\mount /commit
+复制启动文件
+D:\> copy D:\winpe\winpe.wim D:\winpe\ISO\sources\boot.wim
+生成Win PE ISO镜像
+D:\> oscdimg -n -bD:\\winpe\etfsboot.com D:\winpe\ISO D:\\winpe\winpe_cobbler_amd64.iso
+--------------------- 
+#注：上一步中已经定制好了Win PE ISO镜像，接下来我们需要像前面安装CentOS/Ubuntu系统那样，把它导入到Cobbler Server端中。也是下面的三个流程
+上传ISO镜像到 Cobbler Server 端
+导入ISO镜像到 Cobbler Server 端
+配置ISO镜像相关自动值守安装文件
+6. 导入ISO镜像
+[root@autodep down]# cobbler distro add --name=windows7 --kernel=/var/lib/tftpboot/memdisk --initrd=/down/winpe_cobbler_amd64.iso --kopts="raw iso"
+7. 配置ISO镜像的无人值守安装文件
+# touch /var/lib/cobbler/kickstarts/win7pe.xml
+#cobbler profile add --name=windows7 --distro=windows7 --kickstart=/var/lib/cobbler/kickstarts/win7pe.xml
+注：事实上，该自动值守安装文件并没有作用，它不像CentOS的ks以及Ubuntu的Preseed文件那样，内含有操作系统的那些设置，它的作用在于每个系统distro必须有一个profile，因此尽管它并不是实际用来设定系统设置的，但也要指定。这里的win7pe.xml文件可以为空白，但必须要存在。
+##通过samba共享Windows ISO：
+前面已经完成Win PE ISO镜像定制，该ISO镜像通过PXE启动后，能够根据定制中的脚本命令自动获取Windows 7镜像并安装，获取Windows 7镜像的方式是通过网络共享下载。既然是通过网络共享，那么Windows 7镜像就要通过网络共享提供出来，这里使用的方法是使用samba文件共享，通过Cobbler Server端安装部署samba文件共享，提供Windows 7镜像。这里使用的Windows 7 ISO镜像并不是ghost之类的修改版，而是微软官方发布的原生纯净ISO，如果你需要获得相关镜像，可以自行去微软MSDN或者某些网站下载。具体如下：
+8. 安装Samba服务
+yum install samba -y
+9. 配置Samba文件
+---------------------
+# vi /etc/samba/smb.conf
+[global]
+        map to guest = bad user
+        workgroup = jackligroup
+        netbios name = jackliserver
+        server string = Samba Server Version %v
+
+        unix charset = utf8
+        display charset = utf8
+        dos charset = cp950
+
+        log file = /var/log/samba/log.%m
+        max log size = 50
+        security = user
+[share]
+        comment = share directory
+        path = /smb/
+        writable = yes
+        browseable = yes
+        directory mask = 0755
+        create mask = 0755
+        guest ok = yes
+--------------------- 
+10. 配置win7共享文件夹
+--------------------- 
+# mkdir -p /smb/win
+# mkdir /mnt/win7
+# mount /root/cn_windows_7_ultimate_with_sp1_x64_dvd_u_677408.iso /mnt/win7
+# cp -rf /mnt/win7/* /smb/win/
+# chmod -R +x /smb
+--------------------- 
+#注：上面的命令主要功能是创建samba共享文件夹、挂载Windows 7 ISO镜像、拷贝Windows 7 ISO镜像内容到samba共享文件夹中。实际上，这里的文件不仅仅是Windows 7 ISO镜像解压后的内容，还有一个名为“Autounattend.xml”的文件，这个文件并没有通过上面的操作放入到samba共享文件夹中，它的作用和如何生成会在最后一步解释。
+11. 启动Samba服务
+# systemctl start smb
+# systemctl enable smb
+12. 验证smb能否访问
+#注：客户机器PXE启动安装：
+在第二步中配置ISO镜像自动值守安装文件时，说明到那里指定的profile文件可以为空，并不是实际的生效配置文件，第三步中也说到samba共享文件中不仅仅是Windows 7 ISO镜像解压后的内容，还有一个名为“Autounattend.xml”的文件。事实上，到这里已经很清楚，第二步中的空白profile文件无意义，有意义的文件跑到了第三步samba共享文件中。这个文件指定Windows 7系统安装时的参数，比如账号，硬盘分区，防火墙等。
+13. 添加Autounattend.xml文件添加到/smb/win/下
+[root@autodep /]# scp root@192.168.1.19:/Share/Info/3CDaemon/Autounattend.xml /smb/win
+--------------------Autounattend.xml文件内容--------------------
+<?xml version="1.0" encoding="utf-8"?>
+<unattend xmlns="urn:schemas-microsoft-com:unattend">
+    <settings pass="windowsPE">
+        <component name="Microsoft-Windows-International-Core-WinPE" processorArchitecture="amd64" publicKeyToken="31bf3856ad364e35" language="neutral" versionScope="nonSxS" xmlns:wcm="http://schemas.microsoft.com/WMIConfig/2002/State" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+            <SetupUILanguage>
+                <UILanguage>zh-CN</UILanguage>
+            </SetupUILanguage>
+            <InputLocale>zh-CN</InputLocale>
+            <SystemLocale>zh-CN</SystemLocale>
+            <UILanguage>zh-CN</UILanguage>
+            <UserLocale>zh-CN</UserLocale>
+        </component>
+        <component name="Microsoft-Windows-Setup" processorArchitecture="amd64" publicKeyToken="31bf3856ad364e35" language="neutral" versionScope="nonSxS" xmlns:wcm="http://schemas.microsoft.com/WMIConfig/2002/State" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+            <UserData>
+                <ProductKey>
+                    <Key>87VT2-FY2XW-F7K39-W3T8R-XMFGF</Key>
+                </ProductKey>
+                <AcceptEula>true</AcceptEula>
+            </UserData>
+            <ImageInstall>
+                <OSImage>
+                    <InstallFrom>
+                        <MetaData wcm:action="add">
+                            <Key>/image/index</Key>
+                            <Value>4</Value>
+                        </MetaData>
+                    </InstallFrom>
+                    <InstallTo>
+                        <DiskID>0</DiskID>
+                        <PartitionID>1</PartitionID>
+                    </InstallTo>
+                </OSImage>
+            </ImageInstall>
+            <DiskConfiguration>
+                <Disk wcm:action="add">
+                    <ModifyPartitions>
+                        <ModifyPartition wcm:action="add">
+                            <Active>true</Active>
+                            <Extend>false</Extend>
+                            <Format>NTFS</Format>
+                            <Label>OS</Label>
+                            <Letter>C</Letter>
+                            <Order>1</Order>
+                            <PartitionID>1</PartitionID>
+                        </ModifyPartition>
+                    </ModifyPartitions>
+                    <CreatePartitions>
+                        <CreatePartition wcm:action="add">
+                            <Order>1</Order>
+                            <Size>30000</Size>
+                            <Type>Primary</Type>
+                        </CreatePartition>
+                    </CreatePartitions>
+                    <DiskID>0</DiskID>
+                    <WillWipeDisk>true</WillWipeDisk>
+                </Disk>
+            </DiskConfiguration>
+        </component>
+    </settings>
+    <settings pass="oobeSystem">
+        <component name="Microsoft-Windows-Shell-Setup" processorArchitecture="amd64" publicKeyToken="31bf3856ad364e35" language="neutral" versionScope="nonSxS" xmlns:wcm="http://schemas.microsoft.com/WMIConfig/2002/State" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+            <UserAccounts>
+                <LocalAccounts>
+                    <LocalAccount wcm:action="add">
+                        <Password>
+                            <Value>UABhAHMAcwB3AG8AcgBkAA==</Value>
+                            <PlainText>false</PlainText>
+                        </Password>
+                        <DisplayName>GoSun.Inc</DisplayName>
+                        <Group>Administrators</Group>
+                        <Name>gosun</Name>
+                    </LocalAccount>
+                </LocalAccounts>
+            </UserAccounts>
+            <OOBE>
+                <ProtectYourPC>3</ProtectYourPC>
+                <NetworkLocation>Work</NetworkLocation>
+            </OOBE>
+            <TimeZone>China Standard Time</TimeZone>
+        </component>
+    </settings>
+    <settings pass="specialize">
+        <component name="Microsoft-Windows-Shell-Setup" processorArchitecture="amd64" publicKeyToken="31bf3856ad364e35" language="neutral" versionScope="nonSxS" xmlns:wcm="http://schemas.microsoft.com/WMIConfig/2002/State" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+            <ComputerName>*</ComputerName>
+        </component>
+    </settings>
+    <cpi:offlineImage cpi:source="wim:c:/users/observer/desktop/cn_windows_7_ultimate_with_sp1_x64_dvd_u_677408/sources/install.wim#Windows 7 ULTIMATE" xmlns:cpi="urn:schemas-microsoft-com:cpi" />
+</unattend>
+--------------------
+
 
 </pre>
