--- a/1.Cobbler.md
+++ b/1.Cobbler.md
@@ -305,7 +305,8 @@ rpm –ivh https://mirrors.aliyun.com/epel/epel-release-latest-7.noarch.rpm
 Yum install –y koan
 Koan –-server=192.168.1.237 --list=profiles  查看可以重装的系统</pre>
 2. Koan --replace-self --server=192.168.1.237 --profile=CentOS6-x86_64  tftp客户端自动安装指定系统版本
-3. Cobbler网页管理:https://192.168.1.237/cobbler_web用户名和密码默认都是:cobbler
+3. Cobbler网页管理:https://192.168.1.237/cobbler_web用户名和密码默认都是:cobbler 
+#如果无法访问请安装[root@autodep certs]# yum install python2-pip，[root@autodep certs]# pip install ipaddress，[root@autodep certs]# pip install Django==1.8.9
 4. 修改cobbler网页版默认密码：htdigest /etc/cobbler/users.digest  "Cobbler" cobbler（“Cobbler”为用户描述信息，cobbler为要改密码的用户名）
 5. vim /etc/cobbler/pxe/pxedefault.template   #更改自动部署提示信息并设置默认从哪个盘启动，都在此目录
 ####用cobbler来创建yum源：
