modify zabbix add dingding monitor

--- a/2.Zabbix.md
+++ b/2.Zabbix.md
@@ -1,4 +1,4 @@
-﻿#Zabbix
+#Zabbix
 
 <pre>
 ####SecureCRT
@@ -495,7 +495,8 @@ total 4
 1. 在zabbix web中，点击目标主机旁边的web进行设置监控
 2. 点击右上角新建方案
 3. 设置方案名称，更新间隔时间，要监听的网址，最大超时时间，需要返回的状态码200等
-4. 设置触发器，设置表达式为web监控自动添加的web类型的item项{lnmp.jack.com:web.test.rspcode[lnmp-test,step 1].last()}<>200，还要添加另外一个触发器{lnmp.jack.com:web.test.fail[lnmp-test].last()}=1，此触发器表示当web无法连接失败为true(1)时会触发，两个触发器生效才可以。
+4. 设置触发器，设置表达式为web监控自动添加的web类型的item项{lnmp.jack.com:web.test.rspcode[lnmp-test,step 1].last()}<>200，还要添加另外一个触发器{lnmp.jack.com:web.test.fail[lnmp-test].last()}=1，此触发器表示当web无法连接失败为true(1)时会触发，
+Failed step of scenario "smb-web"这个触发器设为<>0才对服务未启用时生效
 5. 如果需要设置认证，在步骤选项上添加post的用户名及密码
 #Action信息模板：
 默认标题：
@@ -1072,9 +1073,72 @@ $IMAGE_FORMAT_DEFAULT   = IMAGE_FORMAT_PNG;
 --------
 [root@lamp-zabbix conf]# chown zabbix.zabbix zabbix.conf.php
 
-
-
-
+##钉钉报警
+#一. 钉钉机器人创建
+登录钉钉客户端,创建一个群,把需要收到报警信息的人员都拉到这个群内.然后点击群右上角的"群机器人"->"添加机器人"->"自定义",记录该机器人的webhook值!
+#二. 脚本1：
+[root@zabbix alertscripts]# cat dingding.py 
+#!/usr/bin/env python
+#coding:utf-8
+#zabbix钉钉报警
+import requests,json,sys,os,datetime
+webhook="https://oapi.dingtalk.com/robot/send?access_token=dcdb94119d8f6d349bb1311c60fa749ab701b55a5d5a6b9f41ae9548bf1ea0"
+user=sys.argv[1]
+text=sys.argv[3]
+data={
+    "msgtype": "text",
+    "text": {
+        "content": text
+    },
+    "at": {
+        "atMobiles": [
+            user
+        ],
+        "isAtAll": False
+    }
+}
+headers = {'Content-Type': 'application/json'}
+x=requests.post(url=webhook,data=json.dumps(data),headers=headers)
+if os.path.exists("/usr/local/zabbix/logs/dingding.log"):
+    f=open("/usr/local/zabbix/logs/dingding.log","a+")
+else:
+    f=open("/usr/local/zabbix/logs/dingding.log","w+")
+f.write("\n"+"--"*30)
+if x.json()["errcode"] == 0:
+    f.write("\n"+str(datetime.datetime.now())+"    "+str(user)+"    "+"发送成功"+"\n"+str(text))
+    f.close()
+else:
+    f.write("\n"+str(datetime.datetime.now()) + "    " + str(user) + "    " + "发送失败" + "\n" + str(text))
+    f.close()
+#脚本2：
+[root@zabbix alertscripts]# cat post.sh 
+#!/bin/bash
+header="Content-Type: application/json;charset=utf-8"
+url="https://oapi.dingtalk.com/robot/send?access_token=dcdb94119d8f6d349bb1311c60fa749ab701b55a5d5a6b9f41ae9548bf1ea0"
+txt='{
+      "msgtype":"text",
+          "text":{
+                 "content":"'$1'"
+                 },
+          "at":{
+                 "atMobiles":["'$2'"],
+                 "isAtAll":false
+                 }
+     }'
+curl  -X POST "${url}" -H "${header}"  -d "${txt}"
+##测试：
+1. ./post.sh waninthisisaest 13661196xxx #第一个值为消息内容，第二个值为你要@特的手机号
+2. ./dingding.py 13661196xxx test "这个条测试信息,忽略" #第一个值为要@特的手机号，第二个值为主题，第三个值为消息内容
+##测试通过后去zabbix WEBGUI进行添加媒介：
+名称:dingding_alert
+类型:script
+脚本名称：dingding.py
+脚本参数：
+{ALERT.SENDTO}   #接收的用户地址
+{ALERT.SUBJECT}  #消息主题
+{ALERT.MESSAGE}  #消息内容
+##去用户添加媒介：
+收件人：就是你的接收着地址，这里发到钉钉群里，填空@的人手机号即可
 
 
 
