--- a/2.Zabbix.md
+++ b/2.Zabbix.md
@@ -495,8 +495,9 @@ total 4
 1. 在zabbix web中，点击目标主机旁边的web进行设置监控
 2. 点击右上角新建方案
 3. 设置方案名称，更新间隔时间，要监听的网址，最大超时时间，需要返回的状态码200等
-4. 设置触发器，设置表达式为web监控自动添加的web类型的item项{lnmp.jack.com:web.test.rspcode[lnmp-test,step 1].last()}<>200，还要添加另外一个触发器{lnmp.jack.com:web.test.fail[lnmp-test].last()}=1，此触发器表示当web无法连接失败为true(1)时会触发，
-Failed step of scenario "smb-web"这个触发器设为<>0才对服务未启用时生效
+4. 设置触发器，设置表达式为web监控自动添加的web类型的item项
+{smb:web.test.fail[smb-web].last()}<>0  #设置失败的步骤是否不等于0，不等于0表示有失败的步骤，会触发报警  ----Failed step of scenario "smb-web".
+{smb:web.test.rspcode[smb-web,smb-web].last()}<>200 #设置响应的代码是否不等于200，不等于200表示服务异常，会触发报警  ----Response code for step "smb-web" of scenario "smb-web".
 5. 如果需要设置认证，在步骤选项上添加post的用户名及密码
 #Action信息模板：
 默认标题：
@@ -1129,6 +1130,9 @@ curl  -X POST "${url}" -H "${header}"  -d "${txt}"
 ##测试：
 1. ./post.sh waninthisisaest 13661196xxx #第一个值为消息内容，第二个值为你要@特的手机号
 2. ./dingding.py 13661196xxx test "这个条测试信息,忽略" #第一个值为要@特的手机号，第二个值为主题，第三个值为消息内容
+3. 编辑zabbix_server.conf配置文件
+	AlertScriptsPath=/usr/local/zabbix/share/zabbix/alertscripts
+#设成报警脚本的目录，后面在zabbixGUI上新建媒介才有用
 ##测试通过后去zabbix WEBGUI进行添加媒介：
 名称:dingding_alert
 类型:script
@@ -1138,7 +1142,13 @@ curl  -X POST "${url}" -H "${header}"  -d "${txt}"
 {ALERT.SUBJECT}  #消息主题
 {ALERT.MESSAGE}  #消息内容
 ##去用户添加媒介：
-收件人：就是你的接收着地址，这里发到钉钉群里，填空@的人手机号即可
+收件人：就是你的接收着地址，这里是发到钉钉群里，所以填写@的人手机号即可
+##在对应主机上添加web监测
+新建web场景，并添加设置步骤，步骤内容为对应的WEB URL地址、设定超时时间、和你需要的代码200
+##新建触发器
+{smb:web.test.fail[smb-web].last()}<>0  #设置失败的步骤是否不等于0，不等于0表示有失败的步骤，会触发报警
+{smb:web.test.rspcode[smb-web,smb-web].last()}<>200 #设置响应的代码是否不等于200，不等于200表示服务异常，会触发报警
+
 
 
 
