--- a/2.Zabbix.md
+++ b/2.Zabbix.md
@@ -1148,7 +1148,13 @@ curl  -X POST "${url}" -H "${header}"  -d "${txt}"
 ##新建触发器
 {smb:web.test.fail[smb-web].last()}<>0  #设置失败的步骤是否不等于0，不等于0表示有失败的步骤，会触发报警
 {smb:web.test.rspcode[smb-web,smb-web].last()}<>200 #设置响应的代码是否不等于200，不等于200表示服务异常，会触发报警
+##发送消息内容模板
+Trigger: {TRIGGER.NAME}
+Trigger status: {TRIGGER.STATUS}
+Trigger severity: {TRIGGER.SEVERITY}
+Original event ID: {EVENT.ID}
 
+{ITEM.NAME} ({HOST.NAME}:{ITEM.KEY}): {ITEM.VALUE}
 
 
 
