add docker deploy elkstack

--- a/8.ELKStack.md
+++ b/8.ELKStack.md
@@ -1,4 +1,4 @@
-#ELKStack
+﻿#ELKStack
 官网：https://www.elastic.co
 插件文档：https://www.elastic.co/guide/en/logstash-versioned-plugins/current/index.html
 ELKStack简介:
@@ -934,5 +934,325 @@ llen key_name
 把之前读取redis的操作，改成mysql。
 
 Head First Python  #这本python书要看一下
+
+</pre>
+
+
+#源码安装ELKstack
+<pre>
+备注:环境为centos7.6 ，请按实际需求更改
+[root@elk down]# wget https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-6.3.0.tar.gz #下载elasticsearch
+[root@elk down]# wget https://artifacts.elastic.co/downloads/kibana/kibana-6.3.0-linux-x86_64.tar.gz  #下载kibana
+[root@elk down]# wget https://artifacts.elastic.co/downloads/logstash/logstash-6.3.0.tar.gz #下载logstash
+[root@elk down]# wget https://artifacts.elastic.co/downloads/beats/filebeat/filebeat-6.3.0-linux-x86_64.tar.gz #下载filebeat
+[root@elk down]# ls
+elasticsearch-6.3.0.tar.gz          kibana-6.3.0-linux-x86_64.tar.gz
+filebeat-6.3.0-linux-x86_64.tar.gz  logstash-6.3.0.tar.gz
+[root@elk down]# tar xf elasticsearch-6.3.0.tar.gz 
+[root@elk down]# tar xf kibana-6.3.0-linux-x86_64.tar.gz 
+[root@elk down]# tar xf filebeat-6.3.0-linux-x86_64.tar.gz 
+[root@elk down]# tar xf logstash-6.3.0.tar.gz 
+[root@elk down]# java -version #安装java1.8
+java version "1.8.0"
+Java(TM) SE Runtime Environment (build 1.8.0-b132)
+Java HotSpot(TM) 64-Bit Server VM (build 25.0-b70, mixed mode)
+#安装elasticsearch
+[root@elk down]# mv elasticsearch-6.3.0 /usr/local/
+[root@elk down]# cd /usr/local/elasticsearch-6.3.0/
+[root@elk elasticsearch-6.3.0]# grep '^[a-Z]' config/elasticsearch.yml  #编辑elasticsearch配置文件
+cluster.name: elkserver
+node.name: node-1
+path.data: /data
+path.logs: /var/log/elasticsearch
+network.host: 192.168.1.237
+http.port: 9200
+bootstrap.memory_lock: true
+[root@elk elasticsearch-6.3.0]# mkdir /var/log/elasticsearch -p
+[root@elk elasticsearch-6.3.0]# mkdir /data -p
+[root@elk elasticsearch-6.3.0]# chown -R elasticsearch.elasticsearch  /var/log/elasticsearch 
+[root@elk elasticsearch-6.3.0]# chown -R elasticsearch.elasticsearch  /data 
+[root@elk elasticsearch-6.3.0]# groupadd elasticsearch  #新建elasticsearch用户，因为启动elasticsearch不允许root用户启动
+[root@elk elasticsearch-6.3.0]# useradd elasticsearch -g elasticsearch -p elasticsearch
+[root@elk elasticsearch-6.3.0]#  chown -R elasticsearch.elasticsearch /usr/local/elasticsearch-6.3.0/
+[root@elk elasticsearch-6.3.0]# vim /etc/security/limits.conf #更改配置使elasticsearch能运行
+elasticsearch soft memlock unlimited  #设置elasticsearch用户软链接，内存锁定大小无限制
+elasticsearch hard memlock unlimited
+elasticsearch soft nofile 65536  #设置elasticsearch用户软链接，打开文件最大65536个
+elasticsearch hard nofile 65536
+elasticsearch soft nproc 4096  #设置elasticsearch用户软链接，打开线程最大4096个
+elasticsearch hard nproc 4096
+备注： elsearch为用户名 可以是使用*进行通配  
+nofile 最大打开文件数目
+nproc 最大打开进程数目
+[root@elk elasticsearch-6.3.0]# vim /etc/sysctl.conf #设置最大的虚拟内存映射数
+vm.max_map_count = 262144
+[root@elk elasticsearch-6.3.0]# sysctl -p
+vm.max_map_count = 262144
+[elasticsearch@elk ~]$ /usr/local/elasticsearch-6.3.0/bin/elasticsearch -d
+[elasticsearch@elk ~]$ netstat -tunlp | grep 9200
+tcp6       0      0 192.168.1.237:9200      :::*                    LISTEN      7414/java 
+[elasticsearch@elk elasticsearch-6.3.0]$ curl -i -XGET "http://192.168.1.237:9200/_count" #测试
+HTTP/1.1 200 OK
+content-type: application/json; charset=UTF-8
+content-length: 71
+
+{"count":0,"_shards":{"total":0,"successful":0,"skipped":0,"failed":0}}
+###elasticsearch启动脚本
+---------------------
+[root@elk init.d]# cat elasticsearch 
+#!/bin/bash
+#
+#init file for elasticsearch
+#chkconfig: - 86 14
+#description: elasticsearch shell
+#
+#processname: elasticsearch
+
+. /etc/rc.d/init.d/functions
+
+export JAVA_HOME=/usr/local/jdk
+export JAVA_BIN=$JAVA_HOME/bin
+export PATH=$PATH:$JAVA_BIN
+export CLASSPATH=.:$JAVA_HOME/lib/dt.jar:$JAVA_HOME/lib/tools.jar
+export JAVA_HOME JAVA_BIN PATH CLASSPATH
+
+##Default variables
+USER=elasticsearch
+ELSHOME=/usr/local/elasticsearch
+
+case "$1" in
+start)
+    su $USER<<!
+    cd $ELSHOME
+    ./bin/elasticsearch -d
+!
+    echo "elasticsearch startup"
+    ;;  
+stop)
+    es_pid=`ps aux|grep elasticsearch | grep -v 'grep elasticsearch' | awk '{print $2}'`
+    kill -9 $es_pid
+    echo "elasticsearch stopped"
+    ;;  
+restart)
+    es_pid=`ps aux|grep elasticsearch | grep -v 'grep elasticsearch' | awk '{print $2}'`
+    kill -9 $es_pid
+    echo "elasticsearch stopped"
+    su $USER<<!
+    cd $ELSHOME
+    ./bin/elasticsearch -d
+!
+    echo "elasticsearch startup"
+    ;;  
+*)
+    echo "start|stop|restart"
+    ;;  
+esac
+
+exit $?
+---------------------
+
+
+#安装kibana
+[root@elk data]# cd /down/
+[root@elk down]# mv kibana-6.3.0-linux-x86_64 /usr/local/
+[root@elk down]# cd /usr/local/kibana-6.3.0-linux-x86_64/
+[root@elk kibana-6.3.0-linux-x86_64]# vim config/kibana.yml 
+[root@elk kibana-6.3.0-linux-x86_64]# grep '^[a-Z]' config/kibana.yml #编辑kibana配置文件
+server.port: 5601
+server.host: "192.168.1.237"
+elasticsearch.url: "http://localhost:9200"
+[root@elk kibana-6.3.0-linux-x86_64]# /usr/local/kibana-6.3.0-linux-x86_64/bin/kibana >& /dev/null & #启动kibana
+[root@elk ~]# netstat -tunlp | grep 5601
+tcp        0      0 192.168.1.237:5601      0.0.0.0:*               LISTEN      8050/node  
+[root@elk translations]# wget https://raw.githubusercontent.com/anbai-inc/Kibana_Hanization/master/translations/zh-CN.json #下载汉化kibanajson文件
+[root@elk translations]# mvzh-CN.json /usr/local/kibana-6.3.0-linux-x86_64/src/core_plugins/kibana/translations/zh-CN.json #移到此位置
+[root@elk kibana]# vim /usr/local/kibana-6.3.0-linux-x86_64/config/kibana.yml 
+i18n.defaultLocale: "zh-CN" #修改默认语言
+[root@elk translations]# /usr/local/kibana-6.3.0-linux-x86_64/bin/kibana >& /dev/null & #重新启动kibana
+#注：当kibana打开时禁止登录表示kibana未成功连接elasticsearch。kibana可以用root用户启动
+
+####kibana启动脚本
+----------------
+[root@elk init.d]# cat kibana 
+#!/bin/bash
+#
+#init file for kibana 
+#chkconfig: - 87 13
+#description: kibana shell
+#
+
+. /etc/rc.d/init.d/functions
+
+export JAVA_HOME=/usr/local/jdk
+export JAVA_BIN=$JAVA_HOME/bin
+export PATH=$PATH:$JAVA_BIN
+export CLASSPATH=.:$JAVA_HOME/lib/dt.jar:$JAVA_HOME/lib/tools.jar
+export JAVA_HOME JAVA_BIN PATH CLASSPATH
+
+##Default variables
+ETVAL=0
+prog="/usr/local/kibana-6.3.0-linux-x86_64/bin/kibana >& /dev/null &"
+desc="kibana"
+lockfile="/var/lock/subsys/kibana"
+
+start(){
+        echo -n $"Starting $desc:"
+        daemon $prog 
+        RETVAL=$?
+        echo 
+        [ $RETVAL -eq 0 ] && touch $lockfile
+        return $RETVAL
+}
+
+stop(){
+        kb_pid=`ps aux|grep '/usr/local/kibana-6.3.0-linux-x86_64/bin'| grep -v 'grep --color=auto /usr/local/kibana-6.3.0-linux-x86_64/bin' | awk '{print $2}'`
+        kill -9 $kb_pid
+        RETVAL=$?
+        echo
+        [ $RETVAL -eq 0 ] && rm -f $lockfile
+        return $RETVAL
+}
+
+restart (){
+        stop
+        start
+}
+
+case "$1" in 
+        start)
+                start;;
+        stop)
+                stop;;
+        restart)
+                restart;;
+        *)
+                echo $"Usage: $0 {start|stop|restart}"
+                RETVAL=1;;
+esac
+exit #RETVAL
+----------------
+
+#安装logstash
+[root@elk down]# mv logstash-6.3.0 /usr/local/ 
+[root@elk logstash-6.3.0]# vim /etc/profile.d/jdk.sh 
+#!/bin/bash
+#
+export JAVA_HOME=/usr/local/jdk   #加一行JAVA_HOME的变量
+export PATH=$PATH:/usr/local/jdk/bin
+[root@elk logstash-6.3.0]# . /etc/profile.d/jdk.sh  #生效变量JAVA_HOME
+[root@elk logstash-6.3.0]# vim config/damo.conf  #新建一个配置文件
+input {
+  file {
+    path => ["/var/log/messages", "/var/log/sucure"]
+    type => "system237-log"
+    start_position => "beginning"
+  }
+  file {
+    path => "/var/log/httpd/*log"
+    type => "httpd-log"
+    start_position => "beginning"
+  }
+}
+
+filter {
+}
+
+output {
+  if [type] == "system237-log" {
+    elasticsearch {
+      hosts => ["192.168.1.237:9200"]
+      index => "system-log-%{+YYYY.MM.dd}"
+    }
+  }
+  if [type] == "httpd-log" {
+    elasticsearch {
+      hosts => ["192.168.1.237:9200"]
+      index => "httpd-log-%{+YYYY.MM.dd}"
+    }
+  }
+}
+
+添加索引httpd-log-*，下一步选择时间戳格式进行保存索引
+
+###logstash设置启动脚本
+[root@elk bin]# /usr/local/logstash/bin/system-install /usr/local/logstash/config/startup.options systemd
+#利用logstash启动脚本安装功能进行注册生成启动脚本，systemd和sysv风格二选一
+
+
+##ELK日志收集系统使用架构
+前端：nginx反向代理+身份验证+ACL
+node1: elasticsearch、kibana
+node2: elasticsearch、kibana
+被收集机器：logstash,收集日志文件发送到elasticsearch
+#注：它们之间全靠elasticsearch存储，各elasticsearch节点之间同步数据达到集群的作用
+
+
+##docker部署elk
+[root@elk2 ~]# docker pull elasticsearch:2.4.6
+[root@elk2 ~]# docker pull kibana:4.5 
+[root@elk2 ~]# docker pull logstash:2.4.0 
+##部署elasticsearch
+[root@elk2 elk]# tree elasticsearch/
+elasticsearch/
+├── config
+│?? ├── elasticsearch.yml
+│?? ├── logging.yml
+│?? └── scripts
+├── data
+│?? └── elkserver
+│??     └── nodes
+│??         └── 0
+│??             ├── node.lock
+│??             └── _state
+│??                 └── global-0.st
+└── logs
+[root@elk2 elk]# cat elasticsearch/config/elasticsearch.yml 
+cluster.name: elkserver
+node.name: node-1
+path.data: /usr/share/elasticsearch/data
+path.logs: /usr/share/elasticsearch/logs
+network.host: 0.0.0.0
+http.port: 9200
+bootstrap.memory_lock: true
+
+docker run --name els -p 9200:9200 -p 9300:9300 -v /docker/elk/elasticsearch/data:/usr/share/elasticsearch/data -v /docker/elk/elasticsearch/config:/usr/share/elasticsearch/config -v /docker/elk/elasticsearch/logs:/usr/share/elasticsearch/logs elasticsearch:2.4.6
+
+#部署kibana
+[root@elk2 elk]# tree kibana/
+kibana/
+└── config
+    └── kibana.yml
+[root@elk2 config]# grep '^[a-Z]' kibana.yml 
+server.port: 5601
+server.host: '0.0.0.0'
+elasticsearch.url: 'http://elasticsearch:9200'
+
+[root@elk2 config]# docker run -d --name kb --link els:elasticsearch -v /docker/elk/kibana/config:/etc/kibana -p 5601:5601 kibana:4.5
+
+#部署logstash
+[root@elk2 elk]# tree logstash/
+logstash/
+├── config
+│?? └── logstash.conf
+└── docker-entrypoint.sh
+[root@elk2 logstash]# cat config/logstash.conf 
+input {
+        tcp {
+                port => 5000
+        }
+}
+output {
+        elasticsearch {
+                hosts => "elasticsearch:9200"
+                index => "system-log-%{+YYYY.MM.dd}"
+        }
+}
+[root@elk2 logstash]# cat docker-entrypoint.sh 
+#!/bin/bash
+/opt/logstash/bin/logstash -f /etc/logstash/conf.d
+
+[root@elk2 elasticsearsh]# docker run --name lg -d -p 5000:5000 -v /docker/elk/logstash/config:/etc/logstash/conf.d -v /docker/elk/logstash/docker-entrypoint.sh:/docker-entrypoint.sh --link els:elasticsearch logstash:2.4.0 
+
+#注：--link els:elasticsearch表示连接名称为els的容器，并取一个elasticsearch别名，使在新建的容器中可以解析els主机的ip
 
 </pre>
