--- a/7.Auto-Deploy.md
+++ b/7.Auto-Deploy.md
@@ -235,7 +235,7 @@ shell_unlock(){
 
 code_get(){
         writelog "code_get";
-        cd $CODE_DIR && echo "git pull"
+        cd $CODE_DIR && git pull
         /bin/cp -r ${CODE_DIR} ${TMP_DIR}/
         API_VER="123"
 }
@@ -422,9 +422,9 @@ main $1 $2
 	1. yum install -y policycoreutils-python
 	2. 添加gitlab镜像:wget https://mirrors.tuna.tsinghua.edu.cn/gitlab-ce/yum/el7/gitlab-ce-10.0.0-ce.0.el7.x86_64.rpm
 	3. 安装gitlab:rpm -i gitlab-ce-10.5.7-ce.0.el7.x86_64.rpm
-	4. 修改gitlab配置文件指定服务器ip和自定义端口:vim  /opt/gitlab/etc/gitlab.rb
+	4. 修改gitlab配置文件指定服务器ip和自定义端口:vim  /opt/gitlab/etc/gitlab.rb  #external_url '192.168.1.235'
 	5. 重置并启动GitLab:1 gitlab-ctl   reconfigure  2 gitlab-ctl   restart
-	6. 克隆gitlab：git glone git@192.168.1.31/web/web-demo.git
+	6. 克隆gitlab：git glone git@192.168.1.31:/web/web-demo.git
 	7. 像git一样push、pull操作
 
 附deploy.sh完全脚本：
@@ -642,9 +642,9 @@ DevOps:是一种文化，是开发、运维、测试之间沟通的一种文化	
 [root@clusterFS-node3-salt ~]# netstat -tunlp | grep 8080  #jenkins默认启动8080端口
 3. 在插件管理中搜索gitlab,安装gitlab plugin和gitlab hook plugin(用于gitlab和jenkins进行令牌认证时用)两个插件，因为要用jenkins和gitlab来集成。
 4. jenkins最主要的是插件，添加插件可以在web上添加安装也可以在/var/lib/jenkins/plugins/目录下添加
-5. 添加凭据：用于访问gitlab的仓库（把jenkins服务机器的公钥放置到gitlab deploy key上，把私钥放置到jenkins上这样可以使用jenkins来访问gitlab仓库）
+5. 添加凭据：用于访问gitlab的仓库（把jenkins服务机器的公钥放置到gitlab deploy key（部署key，只读的，不同于用户key）上，把私钥放置到jenkins上这样可以使用jenkins来访问gitlab仓库）
 6. 新建demo-sonar项目-设置源码从git获取-输入仓库地址、刚才添加的凭据、专门的分支-源码浏览器的URL、版本-然后保存
-6. 立即构建并选写构建任务从控制台输出可查看任务执行情况
+7. 立即构建并选写构建任务从控制台输出可查看任务执行情况
 
 ##持续代码质量管理-Sonar部署：
 Sonar 是一个用于代码质量管理的开放平台。通过插件机制，Sonar 可以集成不同的测试工具，代码分析工具，以及持续集成工具。与持续集成工具（例如 Hudson/Jenkins 等）不同，Sonar 并不是简单地把不同的代码检查工具结果（例如 FindBugs，PMD 等）直接显示在 Web 页面上，而是通过不同的插件对这些结果进行再加工处理，通过量化的方式度量代码质量的变化，从而可以方便地对不同规模和种类的工程进行代码质量管理。
@@ -652,7 +652,7 @@ Sonar 是一个用于代码质量管理的开放平台。通过插件机制，So
 在对其他工具的支持方面，Sonar 不仅提供了对 IDE 的支持，可以在 Eclipse 和 IntelliJ IDEA 这些工具里联机查看结果；同时 Sonar 还对大量的持续集成工具提供了接口支持，可以很方便地在持续集成中使用 Sonar。
 此外，Sonar 的插件还可以对 Java 以外的其他编程语言提供支持，对国际化以及报告文档化也有良好的支持。
 
-Sonar部署
+Sonar部署（跟jenkins部署在同一台服务器）
 需要mysql5.6，java1.8以上
 Sonar的相关下载和文档可以在下面的链接中找到：http://www.sonarqube.org/downloads/。需要注意最新版的Sonar需要至少JDK 1.8及以上版本。
 1. [root@clusterFS-node2-salt auto-deploy]# cd /usr/local/src
@@ -690,7 +690,7 @@ sonar.web.port=9000
 sonar.web.context=/sonarqube  #sonarqube为web的首页
 10. [root@clusterFS-node3-salt conf]# /usr/local/sonarqube/bin/linux-x86-64/sonar.sh start #当sonar服务启动不来时看下与数据库连接是否正常，是个坑
 11. http://192.168.1.37访问sonarqube ,默认帐户密码皆为admin
-12. 手动下载插件可到github Sonaraube社区下载：https://github.com/SonarQubeCommunity，然后可放到/usr/local/sonarqube/extensions/plugins目录下，重启sonar服务即可 
+12. 手动下载插件可到github Sonaraube社区下载：https://github.com/SonarQubeCommunity，然后可放到/usr/local/sonarqube/extensions/plugins目录下，重启sonar服务即可 (sonar web中下载需要到update center中去安装)
 13. 需要下载你要测试的语言包插件，例如python,java,php,css等，插件只是语言规则
 14. 通过SonarQube Scanner来测试代码，需要安装SonarQube Scanner
 15. 下载sonarQube Scanner:[root@clusterFS-node2-salt src]# wget https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-3.3.0.1492-linux.zip
@@ -704,7 +704,7 @@ sonar.jdbc.url=jdbc:mysql://192.168.1.37:3306/sonar?useUnicode=true&characterEnc
 sonar.login=admin   #sonar.login和sonar.password在jenkins上使用sonar scanner进行扫描时需要用到
 sonar.password=admin  
 18. sonar官方提供代码测试地址：https://github.com/sonarSource/sonar-scanning-examples，下载下来
-19. 在/usr/local/src/sonar-scanning-examples-master/sonarqube-scanner-build-wrapper-linux路径下，有sonar-project.properties配置文件，里面填写了有关编程语言的信息，使测试信息到sonarqube上,编辑配置文件如下：
+19. 在/usr/local/src/sonar-scanning-examples-master/sonarqube-scanner-build-wrapper-linux路径下（刚刚下载的文件），有sonar-project.properties配置文件，里面填写了有关编程语言的信息，使测试信息到sonarqube上,编辑配置文件如下：
 [root@clusterFS-node3-salt sonarqube-scanner-build-wrapper-linux]# cat sonar-project.properties
 sonar.projectKey=phpkey
 sonar.projectName=php
@@ -715,39 +715,246 @@ sonar.sourceEncoding=UTF-8
 注：php测试有反应，java测试无反应。1. sonar-project.properties这个配置文件要么让开发写在代码里面，2. 要么手输在sonarqube-scanner里面。
 
 20. 由于sonarqube-scanner需要跟jenkins相结合，所以要在jenkins上装sonarQube Plugin（或者sonarQube Scanner）插件，这样才能使用sonarqube-scanner
-21. 在jenkins中添加sonarquber server:系统管理-系统设置-找到SonarQube servers，然后输入name和server URL进行添加-保存
+21. 在jenkins中添加sonarquber server:系统管理-系统设置-找到SonarQube servers，然后输入name和server URL,版本进行添加-保存
 22. 然后在jenkins上设定sonarqube scanner的软件家目录：全局工具配置-找到SonarQube Scanner-新增SonarQube Scanner-输入Name和sonar运行的家目录-保存
-23. 在jenkins上配置demo-sonar项目-设置sonar scanner为构建器，只填写Analysis properties的参数（填写sonar-project.properties文件的配置信息）-保存
+23. 在jenkins上配置demo-sonar项目-在构建子菜单上设置sonar scanner为构建器，只填写Analysis properties的参数（填写sonar-project.properties文件的配置信息）-保存
 24. 之前新建的项目demo-sonar现在可以从gitlab上获取代码并且可以用sonarqube scanner进行质量检测。下一步是提交质量检测通过的代码到机器上，可以在建立一个项目（为什么不和之前的项目一起？因为有时需要只检测代码质量）
 25. 新建一个项目demo-deploy,让这个项目执行命令：sudo ssh www@192.168.1.31 "./deploy.sh deploy" ，这个脚本就是之前写的自动化部署脚本   #为什么用sudo?因为执行命令的用户是jenkins，而不是root。而jenkins又不在/etc/sudoers里面，需要在/etc/sudoers下加入jenkins的权限【jenkins ALL=(ALL) NOPASSWORD: /usr/bin/ssh】,这下jenkins可以用sudo获取root的权限了，但是root不能直接登录www用户，需要密码，所以需要把root的公钥放置到www的authorized_keys文件下即可。如果jenkins中报tty的错误，需要在/etc/sudoers文件中注释掉#Defaults requiretty即可
-注：jenkins ALL=(ALL) NOPASSWORD: /usr/bin/ssh #意为jenkins用户能在所有主机上以所用用户身份执行，不需要输入密码，只能执行ssh
-26. 安装trigger parameterized plugin（参数触发插件用于项目之间的紧密联动）-进入第一个代码质量检测项目demo-sonar配置-选择trigger parameterized build on other projects（意为在其他项目上触发参数化构建）-选择要构建的项目demo-deploy并保存-最后构建demo-sonar项目，成功后会自动执行demo-deploy项目 || 进入第一个代码质量检测项目demo-sonar-选择构建后操作-选择要构建的项目demo-deploy并保存-最后构建demo-sonar项目，成功后会自动执行demo-deploy项目
+注：jenkins ALL=(ALL) NOPASSWORD: /usr/bin/ssh #意为jenkins用户能在所有主机上使用所有用户身份执行，不需要输入密码，只能执行ssh
+26. 安装trigger parameterized plugin（参数触发插件用于项目之间的紧密联动）-进入第一个代码质量检测项目demo-sonar配置-在构建后操作子菜单中选择trigger parameterized build on other projects（意为在其他项目上触发参数化构建）-选择要构建的项目demo-deploy并保存-最后构建demo-sonar项目，成功后会自动执行demo-deploy项目 || 进入第一个代码质量检测项目demo-sonar-选择构建后操作-选择要构建的项目demo-deploy并保存-最后构建demo-sonar项目，成功后会自动执行demo-deploy项目
 27. 视图：流水线插件安装：build pipeline plugin并重启jenkins服务 
 28. 新建视图demo-pipeline并选择Build Pipeline View确定-设置名称demo-pipeline-选择初始的项目demo-sonar-设置显示构建的数量为5并保存-点runs运行即可。
-29. jenkins跟gitlab的集成：
+29. jenkins跟gitlab的集成（在jenkins上操作）：
 需求：当我commit代码到gitlab仓库上，jenkins自动为我进行代码质量检测并自动部署。
 	1. 安装gitlab hook plugin插件
 	2. 触发远程构建需要令牌，所以需要安装Build Authorization Token Root插件，没有这个插件jenkins令牌与gitlab令牌无法完成认证
 	3. 用linux系统openssl工具生成一个复杂的字符串用作token			
 	[root@clusterFS-node3-salt plugins]# openssl rand -hex 10
 	5be115c01d65ad008de6  #生成随机的十六进制10位数字，16进制每两个字节为1位数字
-	4. 选择demo-sonar项目配置-构建触发器-勾选触发远程构建（粘添刚才生成的字符串）-勾选将更改推送到gitlab时构建并复制gitlab webhook url地址http://192.168.1.37:8080后面用-保存
-	5. 到gitlab上，进入admin area-system hooks-填写jenkins url:http://192.168.1.37:8080/buildByToken/build?job=demo-sonar&token=5be115c01d65ad008de6和token:5be115c01d65ad008de6-勾上push events选项（当push时会产生相应动作）-保存
-	注：百度搜索build authorization token root plugin选择wiki结果可查看gitlab使用方法【build?job=RevolutionTest&token=TacoTuesday】，这里是：http://192.168.1.37:8080/buildByToken/build?job=demo-sonar&token=5be115c01d65ad008de6
+	4. 选择demo-sonar项目配置-构建触发器-勾选触发远程构建（粘添刚才生成的字符串）-勾选将更改推送到gitlab时构建（复制gitlab webhook url地址http://192.168.1.37:8080后面用）-保存
+	5. 到gitlab上，进入admin area-system hooks（项目下的webhooks子菜单）-填写jenkins url:http://192.168.1.37:8080/buildByToken/build?job=demo-sonar&token=5be115c01d65ad008de6和token:5be115c01d65ad008de6-勾上push events选项（当push时会产生相应动作）-保存
+	注：百度搜索build authorization token root plugin选择wiki结果可查看gitlab hook的使用方法【build?job=RevolutionTest&token=TacoTuesday】，这里是：http://192.168.1.37:8080/buildByToken/build?job=demo-sonar&token=5be115c01d65ad008de6
 	6. gitlab上测试push event事件，如果成功则自动化部署成功了
 	7. 在每个项目上配置构建后操作-当部署错误的时候发邮件通知信息
 
+#自动化脚本目录树
+[root@saltsrv deploy]# tree /deploy/
+/deploy/
+├── code
+│?? └── web-demo
+│??     └── index.html
+├── config
+│?? └── web-demo
+│??     ├── base
+│??     │?? └── base.conf.txt
+│??     └── other
+│??         └── 192.168.1.231.crontab.xml.txt
+├── tar
+└── tmp
+    ├── web-demo_724728_2019-09-08-17-18-17
+    │?? ├── base.conf
+    │?? └── index.html
+    ├── web-demo_724728_2019-09-08-17-18-17.tar.gz
+    ├── web-demo_c49dbe_2019-09-08-17-37-31
+    │?? ├── base.conf.txt
+    │?? └── index.html
+    ├── web-demo_c49dbe_2019-09-08-17-37-31.tar.gz
+    ├── web-demo_e731ea_2019-09-08-17-19-40
+    │?? ├── base.conf
+    │?? └── index.html
+    └── web-demo_e731ea_2019-09-08-17-19-40.tar.
+
+二次修改后脚本：
+-------------------------
+[www@saltsrv ~]$ cat deploy.sh
+#/bin/bash
+
+#Description: 1.use www user run. 2.between www and www use private key and publice key authentication. 3.directory must use root permission before create.
+
+#Shell Env
+SHELL_NAME="deploy.sh"
+SHELL_DIR="/home/www"
+SHELL_LOG="${SHELL_DIR}/${SHELL_NAME}.log"
+PRO_NAME="web-demo"
+
+#Dir List
+#mkdir -p /deploy/config/$PRO_NAME/base
+#mkdir -p /deploy/config/$PRO_NAME/other
+#mkdir -p /deploy/tar
+#mkdir -p /deploy/tmp
+#mkdir -p /webroot
+#chown -R www:www /deploy
+#chown -R www:www /opt/webroot
+#chown -R www:www /webroot
+if [ ! -f ${SHELL_LOG} ];then
+        touch ${SHELL_LOG}
+fi
+
+#Node List Env
+PRE_LIST="192.168.1.231"
+#GROUP1_LIST="192.168.1.37"
+ROLLBACK_LIST="192.168.1.231"
+
+#Date/Time Env
+LOG_DATE='date +%Y-%m-%d'
+LOG_TIME='date +%H-%M-%S'
+
+CDATE=$(date +%Y-%m-%d)
+CTIME=$(date +%H-%M-%S)
+
+#Code Env
+CODE_DIR="/deploy/code/$PRO_NAME"
+CONFIG_DIR="/deploy/config/$PRO_NAME"
+TMP_DIR="/deploy/tmp"
+TAR_DIR="/deploy/tar"
+LOCK_FILE="/tmp/deploy.lock"
+
+#Fun
+usage(){
+        echo "Usage: $0 { deploy | rollback [ list | version  ]}"
+}
+
+writelog(){
+        LOGINFO=$1
+        echo "`${LOG_DATE}` `${LOG_TIME}` : ${SHELL_NAME} : ${LOGINFO}"  >> ${SHELL_LOG}
+}
+
+shell_lock(){
+        touch ${LOCK_FILE}
+}
+
+shell_unlock(){
+        rm -f ${LOCK_FILE}
+}
+
+code_get(){
+        writelog "code_get";
+        cd $CODE_DIR && git pull origin master
+        if [ $? = 0 ]; then
+               /bin/cp -r ${CODE_DIR} ${TMP_DIR}/
+                API_VERL=`git show  | grep commit | cut -d ' ' -f2`
+                API_VER="${API_VERL:0:6}"
+        fi
+}
 
 
+code_build(){
+        writelog "code_build"
+}
 
+code_config(){
+        writelog "code_config"
+        /bin/cp -r ${CONFIG_DIR}/base/* ${TMP_DIR}/${PRO_NAME}
+        PKG_NAME="${PRO_NAME}"_"${API_VER}"_"${CDATE}-${CTIME}"
+        cd ${TMP_DIR} && mv ${PRO_NAME} ${PKG_NAME}
+}
 
+code_tar(){
+        writelog "code_tar"
+        cd ${TMP_DIR} && tar -czf ${PKG_NAME}.tar.gz ${PKG_NAME}
+}
 
+code_scp(){
+        writelog "code_scp"
+        for node in $PRE_LIST;do
+                scp ${TMP_DIR}/${PKG_NAME}.tar.gz ${node}:/opt/webroot
+        done
 
+       # for node in $GROUP1_LIST;do
+       #         scp ${TMP_DIR}/${PKG_NAME}.tar.gz ${node}:/opt/webroot
+       # done
+}
 
+url_test(){
+        URL=$1
+        curl -s --head $URL  | grep '200 OK'
+        if [ $? -ne 0 ];then
+                shell_unlock;
+                writelog "test ERROR" && exit 0
+        fi
+}
 
+pre_deploy(){
+        writelog  "remove pre from cluster"
+                ssh ${PRE_LIST} "cd /opt/webroot && tar -xzf ${PKG_NAME}.tar.gz"
+                ssh ${PRE_LIST} "rm -rf /webroot/$PRO_NAME && ln -s /opt/webroot/${PKG_NAME} /webroot/$PRO_NAME"
+        scp ${CONFIG_DIR}/other/192.168.1.231.crontab.xml.txt 192.168.1.231:/webroot/$PRO_NAME/crontab.xml.txt
+}
+pre_test(){
+        writelog "pre_test"
+        url_test "http://${PRE_LIST}:8088/index.html"
+        writelog  "add pre to cluster"
+}
 
+#group1_deploy(){
+#        writelog  "remove group1 from cluster"
+#        for node in $GROUP1_LIST;do
+#                ssh ${node} "cd /opt/webroot && tar -xzf ${PKG_NAME}.tar.gz"
+#                ssh ${node} "rm -f /webroot/$PRO_NAME && ln -s /opt/webroot/${PKG_NAME} /webroot/$PRO_NAME"
+#               scp ${CONFIG_DIR}/other/crontab.xml ${node}:/webroot/$PRO_NAME/crontab.xml
+#        done
+#       }
+#group1_test(){
+#        writelog "group1_test"
+#       for node in $GROUP1_LIST;do
+#               url_test "http://$node/index.html"
+#       done
+#        writelog "add group1 to cluster"
+#}
 
+rollback_fun(){
+        writelog "rollback"
+        for node in $ROLLBACK_LIST;do
+                ssh $node "if [ -d /opt/webroot/$1 ];then rm -f /webroot/$PRO_NAME && ln -s /opt/webroot/$1 /webroot/$PRO_NAME ;else echo '$1 not DIR' && exit ; fi"
+        done
+}
 
+rollback(){
+        if [ -z $1 ];then
+                shell_unlock
+                echo "please input rollback version" && exit
+        fi
+        case $1 in
+                list)
+                        ls -l ${TMP_DIR}/*.tar.gz 
+                        #ls -l /opt/webroot/*.tar.gz
+                        ;;
+                *)
+                        rollback_fun $1
+        esac
+}
 
+main(){
+        if [ -f ${LOCK_FILE} ];then
+                echo "Deploy is running" && exit;
+        fi
+        DEPLOY_METHOD=$1
+        ROLLBACK_VER=$2
+        case $DEPLOY_METHOD in
+                deploy)
+                        shell_lock;
+                        code_get;
+                        code_build;
+                        code_config;
+                        code_tar;
+                        code_scp;
+                        pre_deploy;
+                        pre_test;
+                        #group1_deploy;
+                        #group1_test;
+                        shell_unlock;
+                        ;;
+                rollback)
+                        shell_lock;
+                        rollback $ROLLBACK_VER;
+                        shell_unlock;
+                        ;;
+                *)
+                        usage;
+                        ;;
+        esac
+}
+main $1 $2
+-------------------------
 
 </pre>
